monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/InterfaceWithoutImplementation.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar InterfaceWithoutImplementation {

    interface A;
    interface D extends A;

    X implements A = "x";
    Y = A;
}