monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4006/A4006.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4006;

grammar A4006 {
  A;

}
